# ROBO

./: .gitignore  README.md  contract.txt
agitr/: CMakeLists.txt  change_turtle_pen.cpp  count.cpp  follow.launch  follow_turtle.cpp  hello.cpp  package.xml  pubvel.cpp  readme.txt  spawn_turtle.cpp  subpose.cpp
autoref/: autoref  autoref.pages
com_mytechia_robobo_ros_msgs/: CMakeLists.txt  package.xml
ee09115-trobot/: .hg_archival.txt  settings.gradle
line/: CMakeLists.txt  line.cpp  line.pxm  package.xml
reactive_robot/: CMakeLists.txt  package.xml
reactive_robot/include/: wall_following.h
reactive_robot/src/: main.cpp  wall_following.cpp
reactive_robot/stdr_files/: README.txt
reactive_robot/stdr_files/stdr_launchers/launch/: robo_DD.launch  robo_inD.launch  robo_outD.launch
reactive_robot/stdr_files/stdr_resources/maps/: robo_DD.yaml  robo_inD.yaml  robo_outD.yaml
reactive_robot/stdr_files/stdr_resources/resources/robots/: robo_reactive.xml  robo_reactive.yaml
robobo_line/: CMakeLists.txt  line.cpp  package.xml  readme.txt
robots_education/: SoA_presentation.bib  SoA_presentation.tex
stdr/: DD.pxm  DD.yaml  inD.yaml  laser.xml  robot.xml
stdr_wall/: CMakeLists.txt  package.xml  readme.txt  star.pxm  wall.cpp
trobot/: .hgignore  import-summary.txt
turtlebot_line/: CMakeLists.txt  line.cpp  line.pxm  line_stuff.cpp  package.xml  test.pxm
wall/: CMakeLists.txt  DD.pxm  RandomMove.cpp  config.rviz  laser.xml  outD.yaml  package.xml  readme.txt  robot.xml  robot.yaml  robot_DD.yaml  robot_inD.yaml  robot_outD.yaml  wall.cpp  wall.launch  (+3 more)
(+438 files in other folders)
