<?xml version="1.0"?>
<package>
  <name>reactive_robot</name>
  <version>0.0.1</version>
  <description>reactive_robot package</description>

  <maintainer email="todo@gmail.com">todo</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://todo.com</url>

  <author>João Cardoso</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>

</package>
